<resources>
    <string name="app_name">Money Machine</string>
    <string name="login">Login</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="deposit">Deposit</string>
    <string name="amount">Amount:</string>
    <string name="enter">Enter</string>
    <string name="withdraw">Withdraw</string>
    <string name="user">User: %s</string>
    <string name="_10_19_2019">10-19-2019</string>
    <string name="search">Search</string>
    <string name="summary">summary</string>
    <string name="description">Description</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="total_deposit">Total Deposit: %s</string>
    <string name="total_withdraw">Total withdraw: %s</string>
    <string name="transaction_search">Transaction Search</string>
    <string name="go">Go</string>

    <string-array name="tag_transaction">
        <item>Food</item>
        <item>Health</item>
        <item>Home</item>
        <item>Tech</item>
        <item>Vehicle</item>
        <item>Cloth</item>
        <item>Account</item>
        <item>Other</item>
    </string-array>
    
    
    
</resources>
